# putting

./: 1tail.cpp  1tail2.cpp  2tail.cpp  CMakeLists.txt  Exploration.txt  FakeResults3Category.txt  Results2022.txt  Samples1.txt  cache.hpp  putting.cpp  stats.cpp  stats.hpp  stats2.cpp  stats2.hpp
